--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ CAM_CLIENT_ID=your_entra_client_id
 CAM_CLIENT_SECRET=your_entra_client_secret
 
 # Database
-DATABASE_URL=discord.db
+DATABASE_URL=postgres://postgres:password@localhost:5432/discord
